# tlsdate

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  HACKING  HACKING.md  HARDENING  INSTALL  INSTALL.md  LICENSE  LICENSE.md  Makefile  Makefile.am  Makefile.android  README  README.md  TLSDATEPOOL  TLSDATEPOOL.md  TODO  TODO.md  apparmor-profile  autogen.sh  configure.ac  configure.in  events.dot  mkfile  run-tests  test.conf  tlsdate-brew-formula.rb  tlsdate-helper.1  tlsdate-helper.c  tlsdate-seccomp-amd64.policy  tlsdate-seccomp-arm.policy  tlsdate-seccomp-x86.policy  tlsdate.1  tlsdate.c  tlsdate.h  tlsdated.service
ca-roots/: certdata.new  tlsdate-ca-roots.conf
dbus/: org.torproject.tlsdate.conf.in  org.torproject.tlsdate.service  org.torproject.tlsdate.xml
debian/: .gitignore  README.Debian  changelog  control  copyright  dirs  postinst  postrm  preinst  rules  tlsdate.default  tlsdate.dirs  tlsdate.init  tlsdate.lintian-overrides  tlsdated.default  tlsdated.init  tlsdated.service  watch
debian/patches/: 0001-tlsdate-add-SECCOMP_AUDIT_ARCH-definition-for-MIPS.patch  series
debian/source/: lintian-overrides
etc/: tlsdated.conf
init/: tlsdated-cros.conf
m4/: ax_platform.m4  bottom.m4
man/: tlsdate-clockspeed.1  tlsdate-dbus-announce.1  tlsdate-helper.1  tlsdate-routeup.1  tlsdate.1  tlsdated.1  tlsdated.8  tlsdated.conf.5
src/: Makefile.am  conf-unittest.c  conf.c  conf.h  dbus.c  dbus.h  event-unittest.c  event.c  event.h  include.am  openssl_verify_hacks.c  platform-cros.c  platform.h  proxy-bio-plan9.c  proxy-bio-plan9.h  proxy-bio-unittest.c  proxy-bio.c  proxy-bio.h  proxy-polarssl.c  proxy-polarssl.h  routeup.c  routeup.h  rtc.h  seccomp-compat.h  seccomp.c  seccomp.h  test-bio.c  test-bio.h  test_harness.h  tlsdate-dbus-announce.c  tlsdate-helper-plan9.c  tlsdate-helper-plan9.h  tlsdate-helper.c  tlsdate-helper.h  tlsdate-monitor.c  tlsdate-setter.c  tlsdate.c  tlsdate.h  tlsdated-unittest.c  tlsdated.c  (+5 more)
src/android/: android.c  android.h
src/clockspeed/: BLURB  CHANGES  FILES  INSTALL  Makefile  README  SYSDEPS  TARGETS  THANKS  TODO  VERSION  auto-str.c  auto_home.c  byte_chr.c  byte_copy.c  byte_cr.c  byte_diff.c  byte_zero.c  clockadd.1  clockadd.c  clockspeed.c  clockview.1  clockview.c  conf-cc  conf-home  error.c  error.h  error_str.c  fifo.c  fifo.h  fmt.h  fmt_str.c  fmt_uint.c  fmt_uint0.c  fmt_ulong.c  hasmkffo.h  hasrdtsc.h  hier.c  include.am  install.c  (+54 more)
src/common/: fmemopen-funopen.c  fmemopen.c  fmemopen.h  strnlen.c  strnlen.h
src/compat/: Makefile.am  clock-darwin.c  clock-hurd.c  clock-linux.c  clock.h  include.am
src/events/: check_continuity.c  kickoff_time_sync.c  route_up.c  run_tlsdate.c  save.c  sigchld.c  sigterm.c  time_set.c  tlsdate_status.c
src/test/: check-host-1.c  check-host-2.c  emit.c  proxy-override.c  return-argc.c  rotate.c  rotate.sh  sleep-wrap.c  sleep-wrap.sh
systemd/: tlsdated.service
tests/: README  common.sh
tests/run-idle/: subproc.sh  teardown  test.conf
tests/run-once/: subproc.sh
tests/run-routeup/: input.sh  subproc.sh  test.conf
tests/subproc-retry/: output  subproc.sh  teardown
tests/wait-idle/: setup  subproc.sh
